# truyen_crawler

./: .gitignore  PROJECT_LOG.md  README.md  batch_runner.py  debug_search.py  docker-compose.yml  list_models.py  pyproject.toml  runner.py
app/: main.py
app/api/v1/endpoints/: agent.py  crawler.py  search.py
app/core/: config.py  exceptions.py
app/db/: add_embedding_col.py  backfill.py  models.py  session.py
app/schemas/: agent.py  story.py
app/services/: agent_service.py  crawler.py  langgraph_agent.py  langgraph_tools.py  processor.py  search_service.py  tools.py
app/static/: index.html  script.js  style.css
tests/: test_agent_service.py  test_api.py  test_search_service.py
